<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/edit_layout_bkgnd"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".EditNote" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:id="@+id/tvTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:typeface="serif" 
                    android:text="@string/title" />

                <EditText
                    android:id="@+id/etTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:imeOptions="actionSend|flagNoEnterAction"
                    android:background="#00000000"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:typeface="serif"
                    android:maxLength="18"
                    android:hint="@string/hint_title"
                    android:ems="10"
                    android:inputType="text"
                    tools:ignore="NestedWeights" />
            </LinearLayout>

            <!-- <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"
                android:layout_weight="1" >

                <TextView
                    android:id="@+id/tvDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:typeface="serif" 
                    android:text="@string/date" />

                <TextView
                    android:id="@+id/tvSavedDate"
                    android:textSize="12sp"
                    android:textStyle="italic"
                    android:typeface="serif"
                    android:visibility="invisible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="" />
            </LinearLayout> -->
            

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:background="@drawable/note_content_bkgnd"
            android:gravity="top"
            android:layout_weight="1" >

			<EditText
                    android:id="@+id/etNoteContent"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textMultiLine"
                    android:imeOptions="actionSend|flagNoEnterAction"
                    android:hint="@string/hint_note_content"
                    android:layout_marginLeft="34dip"
                    android:layout_marginTop="56dip"
                    android:layout_marginRight="30dip"
                    android:layout_marginBottom="56dip"
                    android:paddingLeft="10dip"
                    android:paddingRight="10dip"
                    android:ems="10"
                    android:gravity="left|top"
                    android:background="#00000000"
                    android:scrollbarStyle="insideOverlay"
                    android:scrollbars="vertical"
                    android:textAlignment="inherit"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    android:typeface="serif" >

                    <requestFocus />
            </EditText>


        </LinearLayout>

        <LinearLayout
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/bCancel"
                android:background="@drawable/button_bkgnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginBottom="10dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:textColor="#ff2a1506"
		        android:textStyle="bold|italic"
		        android:typeface="serif"
                android:text="@string/cancel" />

            <Button
                android:id="@+id/bSaveEdit"
                android:background="@drawable/button_bkgnd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginTop="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginBottom="10dip"
                android:paddingLeft="10dip"
                android:paddingRight="10dip"
                android:textColor="#ff2a1506"
		        android:textStyle="bold|italic"
		        android:typeface="serif"
                android:text="@string/save" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>